Added jest for testing (hopefully in the future...), and return types for functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
 	"compilerOptions": {
+		"baseUrl": "./src",
+		"paths": {
+			"types": ["../types"],
+			"types/*": ["../types/*"],
+		},
 		"allowJs": true,
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
