--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npm test && tsc",
-    "test": "",
+    "test": "jest",
     "circ": "madge --circular --exclude dist --extensions js,ts --warning --ts-config ./tsconfig.json .",
     "tc": "echo \"Running type checks...\" && tsc --noEmit && echo \"Done!\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.0",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
+    "jest-extended": "^3.1.0",
+    "jsdom": "^20.0.1",
     "madge": "^5.0.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
