--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "jest": "^29.2.1",
-    "jest-environment-jsdom": "^29.2.1",
-    "jest-extended": "^3.1.0",
-    "jsdom": "^20.0.1",
+    "@types/webpack": "^5.28.0",
     "madge": "^5.0.1",
-    "ts-jest": "^29.0.3",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
