--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"rootDirs": ["src"],
 		"noEmitOnError": true,
 		"outDir": "dist",
-		"checkJs": true,
+		"checkJs": false,
 		"maxNodeModuleJsDepth": 2,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
@@ -33,8 +33,7 @@
 			"DOM",
 		],
 		"target": "ES6",
-		"declaration": true,
-		"skipLibCheck": true
+		"declaration": true
 	},
 	"include": [
 		"./src",
@@ -42,5 +41,5 @@
 	],
 	"files": [
 		"./global.d.ts"
-	],
+	]
 }
