--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}\
+        node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm install
     - name: Run unit tests
