--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pack": "npm pack && mv \"./dist/$npm_package_name-$npm_package_version.tgz\" \"./dist/$npm_package_name.tgz\"",
+    "pack": "npm pack ./build --pack-destination ./dist && mv \"./dist/$npm_package_name-$npm_package_version.tgz\" \"./dist/$npm_package_name.tgz\"",
     "test": "",
     "circ": "madge --circular --exclude (dist|build) --extensions js,ts --warning --ts-config ./tsconfig.json .",
     "tc": "echo \"Running type checks...\" && tsc --noEmit && echo \"Done!\""
