IDK how github env works

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,9 +37,7 @@ jobs:
     - name: Pack
       run: npm run pack
     - name: Adding to repo
-      env:
-        AUTHOR: github.actor
       run: |
         git add ./dist
-        git commit -C HEAD --author=$AUTHOR
+        git commit -C HEAD --author=${{ toJSON(github).actor }}
         git push origin HEAD:master
