--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,29 +15,33 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
-      run: npm install
-    - name: Run unit tests
-      run: npm test
-    - name: Compile Typescript
-      run: npx tsc
-    - name: Setup files
-      run: |
-        mkdir -p ./dist
-        cp ./package.json ./build
-        cp ./global.d.ts ./build
-        cp ./webpackUtils.js ./build
-        cp -r ./types ./build
-        cp ./README.md ./build
-    - name: Pack
-      run: npm run pack
-    - name: Adding to repo
-      run: |
-        git add ./dist
-        git commit -C HEAD --author=${{ toJSON(github).actor }}
-        git push origin HEAD:master
+      - name: Test
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo $GITHUB_CONTEXT
+    # - uses: actions/checkout@v3
+    # - name: Use Node.js ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    # - name: Install dependencies
+    #   run: npm install
+    # - name: Run unit tests
+    #   run: npm test
+    # - name: Compile Typescript
+    #   run: npx tsc
+    # - name: Setup files
+    #   run: |
+    #     mkdir -p ./dist
+    #     cp ./package.json ./build
+    #     cp ./global.d.ts ./build
+    #     cp ./webpackUtils.js ./build
+    #     cp -r ./types ./build
+    #     cp ./README.md ./build
+    # - name: Pack
+    #   run: npm run pack
+    # - name: Adding to repo
+    #   run: |
+    #     git add ./dist
+    #     git commit -C HEAD --author=${{ toJSON(github).actor }}
+    #     git push origin HEAD:master
