--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,7 @@ jobs:
 
     steps:
       - name: Test
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo $GITHUB_CONTEXT
+        run: echo ${{ toJson(github).actor }}@$(git log --pretty=format:%ae -n 1)
     # - uses: actions/checkout@v3
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v3
