--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Test
-        run: echo ${{ toJson(github).actor }}@$(git log --pretty=format:%ae -n 1)
+        run: echo "${{ github.event.pusher.name }}@${{ github.event.pusher.email }}"
     # - uses: actions/checkout@v3
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v3
