Hopefully this'll make TS not hate me (i.e. stop typing more than 2 or 3 layers into an object)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,11 @@
 		"strictBindCallApply": true,
 		"allowSyntheticDefaultImports": true,
 		"module": "CommonJS",
-		"moduleResolution": "NodeNext",
+		// "moduleResolution": "NodeNext",
 		"resolveJsonModule": true,
 		"noEmitOnError": true,
 		"outDir": "build",
 		"checkJs": false,
-		"maxNodeModuleJsDepth": 2,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": false,
