--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+        commit-prefix: "[Github Action] "
 
     steps:
     - uses: actions/checkout@v3
@@ -42,5 +43,5 @@ jobs:
         git add ./dist
         git config --local user.name ${{ github.event.pusher.name }}
         git config --local user.email ${{ github.event.pusher.email }}
-        git commit -C HEAD
+        git commit -m "${{ matrix.commit-prefix }}Compiling commit: $(git log -n 1 --pretty=format:%B)""
         git push origin HEAD:master
