--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
 			"types": ["../types"],
 			"types/*": ["../types/*"],
 		},
-		"rootDirs": ["src"],
 		"allowJs": true,
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
@@ -18,7 +17,7 @@
 		"noUnusedParameters": true,
 		"strictBindCallApply": true,
 		"allowSyntheticDefaultImports": true,
-		"module": "CommonJS",
+		"module": "NodeNext",
 		// "moduleResolution": "NodeNext",
 		"resolveJsonModule": true,
 		"noEmitOnError": true,
