--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
 	"compilerOptions": {
 		"baseUrl": "./src",
 		"paths": {
-			"types": ["../types"],
-			"types/*": ["../types/*"],
+			"types": [
+				"../types"
+			],
+			"types/*": [
+				"../types/*"
+			],
 		},
 		"allowJs": true,
 		"allowUnreachableCode": false,
