Typescript. Why do you do this to me

--- a/build.tsconfig.json
+++ b/build.tsconfig.json
@@ -1,6 +1,14 @@
 {
 	"compilerOptions": {
 		"baseUrl": "./",
+		"paths": {
+			"types": [
+				"./types"
+			],
+			"types/*": [
+				"./types/*"
+			]
+		},
 		"allowJs": true,
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
